--- a/praticas/pratica02/package.json
+++ b/praticas/pratica02/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pratica02",
-  "version": "1.0.0",
+  "name": "pratica02v3",
+  "version": "1.2.1",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
